# kakao

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_sync.py
src/kakao_chat_manager/: __init__.py  cleaning.py  exporter.py  parser.py  url_preview.py
tests/: test_app_helpers.py  test_cleaning_and_export.py  test_parser.py  test_streamlit_editor_state.py  test_url_preview.py
tests/fixtures/: sample_chat.txt
