[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kakao-chat-manager"
version = "0.1.0"
description = "KakaoTalk TXT cleanup app built with Streamlit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.45.0",
  "pandas>=2.2.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
